--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -6,39 +6,80 @@
         xmlns:local="clr-namespace:AutomateOpenGraph"
         mc:Ignorable="d"
         Title="AutomateOpenGraph" Height="650" Width="800" WindowStartupLocation="CenterScreen" >
-
-    <ScrollViewer VerticalScrollBarVisibility="Auto" >
-        <Grid Background="#FFC5C5C5">
-
-            <Menu  VerticalAlignment = "Top" >
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Open" Executed="OpenCommand_Executed" CanExecute="OpenCommand_CanExecute" />
+        <CommandBinding Command="ApplicationCommands.Paste" Executed="StartCommand_Executed" CanExecute="StartCommand_CanExecute" />
+        <CommandBinding Command="ApplicationCommands.Stop" Executed="StopCommand_Executed" CanExecute="StopCommand_CanExecute" />
+        <CommandBinding Command="ApplicationCommands.Redo" Executed="ResumeCommand_Executed" CanExecute="ResumeCommand_CanExecute" />
+    </Window.CommandBindings>
+    
+    <DockPanel Background="#FFC5C5C5">
+        <StackPanel DockPanel.Dock="Top" >
+            <Menu    >
                 <MenuItem Header="_File">
-                    <MenuItem Header="_Open" Click="MenuOpen_Click" />
-                    <MenuItem Header="_Start" Click="MenuStart_Click" />
-                    <MenuItem Header="S_top" Click="MenuStop_Click" />
-                    <MenuItem Header="_Resume" Click="MenuResume_Click" />
+                    <MenuItem Header="_Open" Command="ApplicationCommands.Open" />
+                    <MenuItem Header="_Start" Command="ApplicationCommands.Paste" />
+                    <MenuItem Header="S_top" Command="ApplicationCommands.Stop" />
+                    <MenuItem Header="_Resume" Command="ApplicationCommands.Redo" />
                     <Separator />
                     <MenuItem Header="_Exit" Click="MenuExit_Click"/>
                 </MenuItem>
             </Menu>
+            <StackPanel Orientation="Horizontal" Background="#FFE2D6D6" >
+                <Button  ToolTip="Open data file." Margin="2,0" Command="ApplicationCommands.Open">
+                    <Viewbox Width="24" Height="24">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M19,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10L12,6H19A2,2 0 0,1 21,8H21L4,8V18L6.14,10H23.21L20.93,18.5C20.7,19.37 19.92,20 19,20Z" Fill="Black" />
+                        </Canvas>
+                    </Viewbox>
+                </Button>
+                <Button  ToolTip="Start to send keys from first record." Margin="2,0" Command="ApplicationCommands.Paste">
+                    <!--https://materialdesignicons.com/-->
+                    <Viewbox Width="24" Height="24">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M8,5.14V19.14L19,12.14L8,5.14Z" Fill="Black" />
+                        </Canvas>
+                    </Viewbox>
+                </Button>
+                <Button  ToolTip="Stop sending." Margin="2,0" Command="ApplicationCommands.Stop">
+                    <Viewbox Width="24" Height="24">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M18,18H6V6H18V18Z" Fill="Black" />
+                        </Canvas>
+                    </Viewbox>
+                </Button>
 
-            <StackPanel Margin="50,50,50,50">
+                <Button  ToolTip="Resume sending." Margin="2,0" Command="ApplicationCommands.Redo">
+                    <Viewbox Width="24" Height="24">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M12,5V1L7,6L12,11V7A6,6 0 0,1 18,13A6,6 0 0,1 12,19A6,6 0 0,1 6,13H4A8,8 0 0,0 12,21A8,8 0 0,0 20,13A8,8 0 0,0 12,5Z" Fill="Black" />
+                        </Canvas>
+                    </Viewbox>
+                </Button>
+            </StackPanel>
+            <StackPanel Margin="50,0,50,0">
                 <Label Name="lbMsg" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"  Content="lbMsg" />
                 <Label Name="lbStatus" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Last Sent : " />
                 <Label Name="lbDataInfo" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Content="lbDataInfo" />
+            </StackPanel>
+
+        </StackPanel>
+        <ScrollViewer VerticalScrollBarVisibility="Auto" >
+            <Grid  Margin="50,0,50,50">
 
                 <DataGrid Name="gridTable"  AutoGenerateColumns="False" IsReadOnly="True">
                     <DataGrid.Columns>
 
                         <DataGridTextColumn Header="Stock Name" Binding="{Binding StockName}"  />
                         <DataGridTextColumn Header="% Change" Binding="{Binding ChangePercent, StringFormat={}{0:#,##0.00}}" />
-                        <DataGridTextColumn Header="Closed Price" Binding="{Binding ClosedPrice, StringFormat={}{0:#,##0.00}}" />
-                        
+                        <DataGridTextColumn Header="Closed Price" Binding="{Binding ClosedPrice, StringFormat={}{0:n2}}" />
+
                     </DataGrid.Columns>
                 </DataGrid>
 
-        </StackPanel>
-        
-        </Grid>
-    </ScrollViewer>
+            </Grid>
+        </ScrollViewer>
+    </DockPanel>
+ 
 
 </Window>
