--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -11,51 +11,54 @@
         <CommandBinding Command="ApplicationCommands.Paste" Executed="StartCommand_Executed" CanExecute="StartCommand_CanExecute" />
         <CommandBinding Command="ApplicationCommands.Stop" Executed="StopCommand_Executed" CanExecute="StopCommand_CanExecute" />
         <CommandBinding Command="ApplicationCommands.Redo" Executed="ResumeCommand_Executed" CanExecute="ResumeCommand_CanExecute" />
+        <CommandBinding Command="ApplicationCommands.Find" Executed="FindCommand_Executed" CanExecute="FindCommand_CanExecute" />
     </Window.CommandBindings>
     
-    <DockPanel Background="#FFC5C5C5">
+    <DockPanel Background="#FFC1B8B8">
         <StackPanel DockPanel.Dock="Top" >
-            <Menu    >
-                <MenuItem Header="_File">
-                    <MenuItem Header="_Open" Command="ApplicationCommands.Open" />
-                    <MenuItem Header="_Start" Command="ApplicationCommands.Paste" />
-                    <MenuItem Header="S_top" Command="ApplicationCommands.Stop" />
-                    <MenuItem Header="_Resume" Command="ApplicationCommands.Redo" />
-                    <Separator />
-                    <MenuItem Header="_Exit" Click="MenuExit_Click"/>
-                </MenuItem>
-            </Menu>
-            <StackPanel Orientation="Horizontal" Background="#FFE2D6D6" >
-                <Button  ToolTip="Open data file." Margin="2,0" Command="ApplicationCommands.Open">
+
+            <StackPanel Orientation="Horizontal" Background="#FF998F8F" >
+                <Button  ToolTip="Open data file." Margin="2,0" Command="ApplicationCommands.Open" Background="{x:Null}" BorderBrush="{x:Null}">
                     <Viewbox Width="24" Height="24">
                         <Canvas Width="24" Height="24">
-                            <Path Data="M19,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10L12,6H19A2,2 0 0,1 21,8H21L4,8V18L6.14,10H23.21L20.93,18.5C20.7,19.37 19.92,20 19,20Z" Fill="Black" />
+                            <Path Data="M19,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10L12,6H19A2,2 0 0,1 21,8H21L4,8V18L6.14,10H23.21L20.93,18.5C20.7,19.37 19.92,20 19,20Z" Fill="White" />
                         </Canvas>
                     </Viewbox>
                 </Button>
-                <Button  ToolTip="Start to send keys from first record." Margin="2,0" Command="ApplicationCommands.Paste">
+                <Button  ToolTip="Start to send keys from first record." Margin="2,0" Command="ApplicationCommands.Paste" Background="{x:Null}" BorderBrush="{x:Null}">
                     <!--https://materialdesignicons.com/-->
                     <Viewbox Width="24" Height="24">
                         <Canvas Width="24" Height="24">
-                            <Path Data="M8,5.14V19.14L19,12.14L8,5.14Z" Fill="Black" />
+                            <Path Data="M8,5.14V19.14L19,12.14L8,5.14Z" Fill="White" />
                         </Canvas>
                     </Viewbox>
                 </Button>
-                <Button  ToolTip="Stop sending." Margin="2,0" Command="ApplicationCommands.Stop">
+                <Button  ToolTip="Stop sending." Margin="2,0" Command="ApplicationCommands.Stop" Background="{x:Null}" BorderBrush="{x:Null}">
                     <Viewbox Width="24" Height="24">
                         <Canvas Width="24" Height="24">
-                            <Path Data="M18,18H6V6H18V18Z" Fill="Black" />
+                            <Path Data="M18,18H6V6H18V18Z" Fill="White" />
                         </Canvas>
                     </Viewbox>
                 </Button>
 
-                <Button  ToolTip="Resume sending." Margin="2,0" Command="ApplicationCommands.Redo">
+                <Button  ToolTip="Resume sending." Margin="2,0" Command="ApplicationCommands.Redo" Background="{x:Null}" BorderBrush="{x:Null}">
                     <Viewbox Width="24" Height="24">
                         <Canvas Width="24" Height="24">
-                            <Path Data="M12,5V1L7,6L12,11V7A6,6 0 0,1 18,13A6,6 0 0,1 12,19A6,6 0 0,1 6,13H4A8,8 0 0,0 12,21A8,8 0 0,0 20,13A8,8 0 0,0 12,5Z" Fill="Black" />
+                            <Path Data="M12,5V1L7,6L12,11V7A6,6 0 0,1 18,13A6,6 0 0,1 12,19A6,6 0 0,1 6,13H4A8,8 0 0,0 12,21A8,8 0 0,0 20,13A8,8 0 0,0 12,5Z" Fill="White" />
                         </Canvas>
                     </Viewbox>
                 </Button>
+
+                <TextBox Name="txtSearch" Margin="2,0" Width="85" Padding="2,4,2,0" CharacterCasing="Upper" KeyDown="TxtSearch_KeyDown" ></TextBox>
+                
+                <Button  ToolTip="Find Stock." Margin="2,0" Command="ApplicationCommands.Find" Background="{x:Null}" BorderBrush="{x:Null}">
+                    <Viewbox Width="24" Height="24">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M6,4H13L18,9V17.58L16.16,15.74C17.44,13.8 17.23,11.17 15.5,9.46C14.55,8.5 13.28,8 12,8C10.72,8 9.45,8.5 8.47,9.46C6.5,11.41 6.5,14.57 8.47,16.5C9.44,17.5 10.72,17.97 12,17.97C12.96,17.97 13.92,17.69 14.75,17.14L17.6,20H6V4M14.11,15.1C13.55,15.66 12.8,16 12,16C11.2,16 10.45,15.67 9.89,15.1C9.33,14.54 9,13.79 9,13C9,12.19 9.32,11.44 9.89,10.88C10.45,10.31 11.2,10 12,10C12.8,10 13.55,10.31 14.11,10.88C14.67,11.44 15,12.19 15,13C15,13.79 14.68,14.54 14.11,15.1Z" Fill="White" />
+                        </Canvas>
+                    </Viewbox>
+                </Button>
+                
             </StackPanel>
             <StackPanel Margin="50,0,50,0">
                 <Label Name="lbMsg" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"  Content="lbMsg" />
