--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -56,6 +56,8 @@
 
                 <Button  FontWeight="Bold" FontSize="14"  ToolTip="Exc SET 100" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="ExcSet100Button_Click" Content="|  Exc SET 100"/>
 
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="WarrantButton_Click" Content="|  Warrant"/>
+
             </StackPanel>
             <StackPanel Margin="50,0,50,0">
                 <Label Name="lbMsg" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"  Content="lbMsg" />
