--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -60,6 +60,10 @@
 
                 <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="WarrantButton_Click" Content="|  Warrant"/>
 
+                <Label FontWeight="Bold" FontSize="14"> | Delay(sec) </Label>
+                
+                <TextBox FontWeight="Bold" FontSize="14"  Name="txtDelay" Margin="2,0" Width="65" TextAlignment="Center" Padding="2,4,2,0" CharacterCasing="Upper" Text="5" TextChanged="TxtDelay_TextChanged"  />
+
             </StackPanel>
             <StackPanel Margin="50,0,50,0">
                 <Label Name="lbMsg" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"  Content="lbMsg" />
