--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutomateOpenGraph"
         mc:Ignorable="d"
-        Title="AutomateOpenGraph" Height="650" Width="800" WindowStartupLocation="CenterScreen" >
+        Title="AutomateOpenGraph" Height="835" Width="800" WindowStartupLocation="CenterScreen" >
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Open" Executed="OpenCommand_Executed" CanExecute="OpenCommand_CanExecute" />
         <CommandBinding Command="ApplicationCommands.Paste" Executed="StartCommand_Executed" CanExecute="StartCommand_CanExecute" />
@@ -66,8 +66,8 @@
 
             </StackPanel>
             <StackPanel Margin="50,0,50,0">
-                <Label Content="Base URL" FontSize="14" FontWeight="Black"></Label>
-                <TextBox Name="txtBaseURL" FontSize="16">https://www.set.or.th/set/companyhighlight.do?symbol=xxx&amp;ssoPageId=5&amp;language=th&amp;country=TH</TextBox>
+                <Label Content="Base URL(xxx will be replaced with stock code)" FontSize="14" FontWeight="Black"></Label>
+                <TextBox Name="txtBaseURL" FontSize="16"></TextBox>
                 <Label Name="lbMsg" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"  Content="lbMsg" />
                 <Label Name="lbStatus" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Last Sent : " />
                 <Label Name="lbDataInfo" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Content="lbDataInfo" />
