add market button

--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -52,15 +52,17 @@
 
                 <TextBox FontWeight="Bold" FontSize="14"  Name="txtSearch" Margin="2,0" Width="85" Padding="2,4,2,0" CharacterCasing="Upper" KeyDown="TxtSearch_KeyDown" Text="SEARCH"  ></TextBox>
 
-                <Button  FontWeight="Bold" FontSize="14"  ToolTip="All" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="AllButton_Click" Content="|  All " />
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="All" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="AllButton_Click" Content="| All" />
 
-                <Button  FontWeight="Bold" FontSize="14" ToolTip="SET 50" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="Set50Button_Click" Content="|  SET50" />
+                <Button  FontWeight="Bold" FontSize="14" ToolTip="Market" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="MarketButton_Click" Content="| Market" />
+
+                <Button  FontWeight="Bold" FontSize="14" ToolTip="SET 50" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="Set50Button_Click" Content="| SET50" />
                 
-                <Button  FontWeight="Bold" FontSize="14" ToolTip="SET 100" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="Set100Button_Click" Content="|  SET100" />
+                <Button  FontWeight="Bold" FontSize="14" ToolTip="SET 100" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="Set100Button_Click" Content="| SET100" />
 
-                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Exc SET 100" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="ExcSet100Button_Click" Content="|  Exc SET100"/>
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Exc SET 100" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="ExcSet100Button_Click" Content="| Small"/>
 
-                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="WarrantButton_Click" Content="|  Warrant"/>
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="WarrantButton_Click" Content="|  War"/>
 
                 <Label FontWeight="Bold" FontSize="14"> | Delay(sec) </Label>
                 
