--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -64,9 +64,11 @@
 
                 <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="WarrantButton_Click" Content="| War"/>
 
-                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="S50DWButton_Click" Content="| S50DW"/>
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="SET50DW" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="S50DWButton_Click" Content="| S50DW"/>
 
-                <Button  FontWeight="Bold" FontSize="14"  ToolTip="Warrant" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="AllDWButton_Click" Content="| DW"/>
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="DW" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="AllDWButton_Click" Content="| DW"/>
+
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="IPO" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="IPOButton_Click" Content="| IPO"/>
 
                 <Label FontWeight="Bold" FontSize="14"> | Delay(sec) </Label>
                 
@@ -92,6 +94,10 @@
                         <DataGridTextColumn Header="Stock Name" Binding="{Binding StockName}"  />
                         <DataGridTextColumn Header="% Change" Binding="{Binding ChangePercent, StringFormat={}{0:#,##0.00}}" />
                         <DataGridTextColumn Header="Closed Price" Binding="{Binding ClosedPrice, StringFormat={}{0:n2}}" />
+                        <DataGridTextColumn Header="IPO Date" Binding="{Binding IPODate,StringFormat='yyyy-MM-dd'}" />
+                        <DataGridTextColumn Header="IPO Last" Binding="{Binding IPOLast}" />
+                        <DataGridTextColumn Header="IPO Market Cap" Binding="{Binding IPOSizeML, StringFormat={}{0:#,##0.00}}" />
+                        <DataGridTextColumn Header="SET/Mai" Binding="{Binding SETMAI}" />
 
                     </DataGrid.Columns>
                 </DataGrid>
