--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -70,6 +70,8 @@
 
                 <Button  FontWeight="Bold" FontSize="14"  ToolTip="IPO" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="IPOButton_Click" Content="| IPO"/>
 
+                <Button  FontWeight="Bold" FontSize="14"  ToolTip="IPO War" Margin="2,0"  Background="{x:Null}" BorderBrush="{x:Null}" Click="IPOWarButton_Click" Content="| IPO War"/>
+
                 <Label FontWeight="Bold" FontSize="14"> | Delay(sec) </Label>
                 
                 <TextBox FontWeight="Bold" FontSize="14"  Name="txtDelay" Margin="2,0" Width="65" TextAlignment="Center" Padding="2,4,2,0" CharacterCasing="Upper" Text="" TextChanged="TxtDelay_TextChanged"  />
