--- a/AutomateOpenGraph/MainWindow.xaml
+++ b/AutomateOpenGraph/MainWindow.xaml
@@ -105,6 +105,9 @@
                         <DataGridTextColumn Header="Days" Binding="{Binding IPOLast}" />
                         <DataGridTextColumn Header="IPO Price/Strike Price" Binding="{Binding IPOPrice, StringFormat={}{0:#,##0.00}}" />
                         <DataGridTextColumn Header="SET/Mai" Binding="{Binding SETMAI}" />
+                        <DataGridTextColumn Header="Size(M shares)" Binding="{Binding IPOSizeML}" />
+                        <DataGridTextColumn Header="SP Date" Binding="{Binding SpDate,StringFormat='yyyy-MM-dd'}" />
+                        <DataGridTextColumn Header="Days" Binding="{Binding DayToSP}" />
 
                     </DataGrid.Columns>
                 </DataGrid>
